# ros_basics

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: chat.launch  mimic.launch  teleop.launch  turtlemimic.launch
scripts/: listener.py  mimic.py  square.py  talker.py
